  - lmsd/payments: Fixed error "Unknown column 'ats.customerid' in 'where clause'" (alec)
  - Added Promotions with assignments shedule schemas (alec)
  - Use tariff name+value+period as a unique key instead of just a name (alec)
  - Now PostgreSQL 8.2 is required because of multi-value INSERT usage (alec)
  - Fixed netdevices searching by MAC address (alec)

version 1.11.11 Bray (2011-01-17)

  - fixed SQL queries in postfix configuration manual (alec)
  - BTS#0000832: fixed stats compacting (alec)
  - we can bind many macs to one node (chilan)
  - show all accounts and mail forwards in aliaslist (chilan)
  - added vnodes sql view for simpler nodes mac processing (chilan)
  - xajaxResponse object can be used in document plugins (alec)
  - separated setting for validating functions locales (chilan)
  - fixed displaying of assignments with 'HALFYEARLY' period (ceho)
  - re-designed customer assignments forms (alec)
  - invoices payment type field replaced with selection list (alec)
    -----------------------------------------------------------------
    WARNING: Database upgrade procedure may eat your data.
        Make sure you have no unsupported payment types in
        database with SQL query:
        SELECT LOWER(paytype) FROM documents GROUP BY LOWER(paytype);

        Supported values are: cash, transfer, transfer/cash, card,
        compensation, barter, contract (and its Polish translations)
        or empty string.
    -----------------------------------------------------------------
  - Per-assignment payment type and numbering plan (alec)
  - fixed removal of helpdesk attachments + added foreign keys (alec)
  - fixed array_agg definition for Postgresql 8.1 (alec)
  - fixed accounting and period description of quarterly payments (alec)
  - lmsd/ewx-stm-channels: include node's MAC in syslog messages (alec)
  - lmsd/ewx-stm-channels: added MAC duplicate prevention (alec)
  - lmsd/ewx-stm-channels: added "empty" IP/MAC pair prevention (alec)