@@ -90,7 +90,7 @@ function set_datetime(n_datetime, b_close) {
 	if (!dt_datetime) return;
 	if (b_close) {
 //		window.close();
-        window.parent.nd();
+        window.parent.popclick();
 		obj_caller.target.value = (document.cal
 			? obj_caller.gen_tsmp(dt_datetime)
 			: obj_caller.gen_date(dt_datetime)
