@@ -18,6 +18,7 @@ version ? (????-??-??)
   - Use tariff name+value+period as a unique key instead of just a name (alec)
   - Now PostgreSQL 8.2 is required because of multi-value INSERT usage (alec)
   - Fixed netdevices searching by MAC address (alec)
+  - BTS#0000860: Fixed sticky popups (alec)
 
 version 1.11.11 Bray (2011-01-17)
 
